WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41795
Interpreter: Crash in op_load_varargs on 64-bit
https://bugs.webkit.org/show_bug.cgi?id=41795
Summary
Interpreter: Crash in op_load_varargs on 64-bit
Andreas Kling
Reported
2010-07-07 13:10:56 PDT
A number of layout tests currently crash when using the JSC interpreter on a 64-bit host. This is due to recent fiddling with int32_t vs uint32_t in JavaScriptCore/interpreter/Interpreter.cpp
Attachments
Proposed patch
(1.69 KB, patch)
2010-07-07 13:12 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-07-07 13:12:44 PDT
Created
attachment 60769
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2010-07-08 00:51:05 PDT
Comment on
attachment 60769
[details]
Proposed patch Clearing flags on attachment: 60769 Committed
r62766
: <
http://trac.webkit.org/changeset/62766
>
WebKit Commit Bot
Comment 3
2010-07-08 00:51:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug