2010-07-08  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Oliver Hunt.

        Interpreter: Crash in op_load_varargs on 64-bit
        https://bugs.webkit.org/show_bug.cgi?id=41795

        Added missing cast of argCount to int32_t in op_load_varargs.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

Canonical link: https://commits.webkit.org/53661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62766 268f45cc-cd09-0410-ab3c-d52691b4dbfc